examples/diagnostics/expected/1130-diagnostics-array-dim-oversized-u32.stderr
error: array dimension 5000000000 does not fit in u32
  --> examples/diagnostics/1130-diagnostics-array-dim-oversized-u32.sx:13:10
   |
13 |     a : [5000000000]i64 = ---;
   |          ^^^^^^^^^^
